lang/src/Parser.ts
// tslint:disable:only-arrow-functions
// tslint:disable:object-literal-shorthand
// tslint:disable:trailing-comma
// tslint:disable:object-literal-sort-keys
// tslint:disable:one-variable-per-declaration
// tslint:disable:max-line-length
// tslint:disable:no-consecutive-blank-lines
// tslint:disable:align


// Generated by PEG.js v. 0.10.0 (ts-pegjs plugin v. 0.2.2 )
//
// https://pegjs.org/   https://github.com/metadevpro/ts-pegjs

"use strict";

export interface IFilePosition {
  offset: number;
  line: number;
  column: number;
}

export interface IFileRange {
  start: IFilePosition;
  end: IFilePosition;
}

export interface ILiteralExpectation {
  type: "literal";
  text: string;
  ignoreCase: boolean;
}

export interface IClassParts extends Array<string | IClassParts> {}

export interface IClassExpectation {
  type: "class";
  parts: IClassParts;
  inverted: boolean;
  ignoreCase: boolean;
}

export interface IAnyExpectation {
  type: "any";
}

export interface IEndExpectation {
  type: "end";
}

export interface IOtherExpectation {
  type: "other";
  description: string;
}

export type Expectation = ILiteralExpectation | IClassExpectation | IAnyExpectation | IEndExpectation | IOtherExpectation;

export class SyntaxError extends Error {
  public static buildMessage(expected: Expectation[], found: string | null) {
    function hex(ch: string): string {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function classEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function describeExpectation(expectation: Expectation) {
      switch (expectation.type) {
        case "literal":
          return "\"" + literalEscape(expectation.text) + "\"";
        case "class":
          const escapedParts = expectation.parts.map((part) => {
            return Array.isArray(part)
              ? classEscape(part[0] as string) + "-" + classEscape(part[1] as string)
              : classEscape(part);
          });

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        case "any":
          return "any character";
        case "end":
          return "end of input";
        case "other":
          return expectation.description;
      }
    }

    function describeExpected(expected1: Expectation[]) {
      const descriptions = expected1.map(describeExpectation);
      let i;
      let j;

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found1: string | null) {
      return found1 ? "\"" + literalEscape(found1) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }

  public message: string;
  public expected: Expectation[];
  public found: string | null;
  public location: IFileRange;
  public name: string;

  constructor(message: string, expected: Expectation[], found: string | null, location: IFileRange) {
    super();
    this.message = message;
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";

    if (typeof (Error as any).captureStackTrace === "function") {
      (Error as any).captureStackTrace(this, SyntaxError);
    }
  }
}

function peg$parse(input: string, options?: IParseOptions) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};

  const peg$startRuleFunctions: {[id: string]: any} = { Program: peg$parseProgram };
  let peg$startRuleFunction: () => any = peg$parseProgram;

  const peg$c0 = function(stmts: any) {
      return stmts.map(function(element) {
        return element[1];
      });
    };
  const peg$c1 = "#";
  const peg$c2 = peg$literalExpectation("#", false);
  const peg$c3 = "\n";
  const peg$c4 = peg$literalExpectation("\n", false);
  const peg$c5 = peg$anyExpectation();
  const peg$c6 = function() {
      return { kind: "comment", value: text() }
    };
  const peg$c7 = function(id: any) {
      return { id: id };
    };
  const peg$c8 = peg$otherExpectation("function");
  const peg$c9 = "fun";
  const peg$c10 = peg$literalExpectation("fun", false);
  const peg$c11 = "(";
  const peg$c12 = peg$literalExpectation("(", false);
  const peg$c13 = ")";
  const peg$c14 = peg$literalExpectation(")", false);
  const peg$c15 = ":";
  const peg$c16 = peg$literalExpectation(":", false);
  const peg$c17 = "end";
  const peg$c18 = peg$literalExpectation("end", false);
  const peg$c19 = function(id: any, params: any, returnType: any, stmts: any) {
      return {
        kind: "function",
        name: id,
        params: params,
        returnTypeName: returnType != null ? returnType[2] : null,
        block: stmts.map(function(element) { return element[1]; }),
        location: location()
      };
    };
  const peg$c20 = function(name: any, typeName: any) {
      return {
        name: name,
        typeName: typeName
      }
    };
  const peg$c21 = ",";
  const peg$c22 = peg$literalExpectation(",", false);
  const peg$c23 = function(params: any) {
      if (params == null) return [];
      var head = params[0];
      params = params[1].map(function(element) {
        return element[3];
      })
    	params.unshift(head);
      return params;
    };
  const peg$c24 = "record";
  const peg$c25 = peg$literalExpectation("record", false);
  const peg$c26 = function(name: any, fields: any) {
      return {
        kind: "record",
        name: name,
        fields: fields,
        location: location()
      }
    };
  const peg$c27 = function(fields: any) {
      if (fields == null) return [];
      var head = fields[0];
      fields = fields[1].map(function(element) {
        return element[1];
      })
    	fields.unshift(head);
      return fields;
    };
  const peg$c28 = "var";
  const peg$c29 = peg$literalExpectation("var", false);
  const peg$c30 = "=";
  const peg$c31 = peg$literalExpectation("=", false);
  const peg$c32 = function(id: any, typeName: any, init: any) {
      return {
        kind: "variable",
        name: id,
        typeName: typeName? typeName[2] : null,
        value: init,
        location: location()
      };
    };
  const peg$c33 = function(id: any, value: any) {
      return {
        kind: "assignment",
        id: id,
        value: value,
        location: location()
      };
    };
  const peg$c34 = "repeat";
  const peg$c35 = peg$literalExpectation("repeat", false);
  const peg$c36 = "times";
  const peg$c37 = peg$literalExpectation("times", false);
  const peg$c38 = function(count: any, stmts: any) {
      return {
        kind: "repeat",
        count: count,
        block: stmts.map(function(element) { return element[1]; }),
        location: location()
      };
    };
  const peg$c39 = "while";
  const peg$c40 = peg$literalExpectation("while", false);
  const peg$c41 = "do";
  const peg$c42 = peg$literalExpectation("do", false);
  const peg$c43 = function(cond: any, stmts: any) {
      return {
        kind: "while",
        condition: cond,
        block: stmts.map(function(element) { return element[1]; }),
        location: location()
      };
    };
  const peg$c44 = "if";
  const peg$c45 = peg$literalExpectation("if", false);
  const peg$c46 = "then";
  const peg$c47 = peg$literalExpectation("then", false);
  const peg$c48 = "elseif";
  const peg$c49 = peg$literalExpectation("elseif", false);
  const peg$c50 = "else";
  const peg$c51 = peg$literalExpectation("else", false);
  const peg$c52 = function(cond: any, trueBlock: any, elseIfs: any, falseBlock: any) {
      if (elseIfs.length > 0) {
      	elseIfs[0] = 0
      }

      return {
      	kind: "if",
        condition: cond,
        trueBlock: trueBlock.map(function(element) { return element[1]; }),
        elseIfs: elseIfs,
        falseBlock: falseBlock ? falseBlock[2].map(function(element) { return element[1]; }) : [],
        location: location()
  	  }
    };
  const peg$c53 = "return";
  const peg$c54 = peg$literalExpectation("return", false);
  const peg$c55 = function(value: any) {
      return {
        kind: "return",
        value: value,
        location: location()
      }
    };
  const peg$c56 = "break";
  const peg$c57 = peg$literalExpectation("break", false);
  const peg$c58 = function() {
      return {
        kind: "break",
        location: location
      }
    };
  const peg$c59 = "continue";
  const peg$c60 = peg$literalExpectation("continue", false);
  const peg$c61 = function() {
      return {
        kind: "continue",
        location: location
      }
    };
  const peg$c62 = "and";
  const peg$c63 = peg$literalExpectation("and", false);
  const peg$c64 = "or";
  const peg$c65 = peg$literalExpectation("or", false);
  const peg$c66 = "xor";
  const peg$c67 = peg$literalExpectation("xor", false);
  const peg$c68 = function(head: any, tail: any) {
      if (tail.length == 0) return head;

    	return tail.reduce(function(result, element) {
      	return {
            kind: "binaryOp",
            operator: element[1],
            left: result,
            right: element[3],
            location: location()
          }
      }, head);
    };
  const peg$c69 = "<=";
  const peg$c70 = peg$literalExpectation("<=", false);
  const peg$c71 = ">=";
  const peg$c72 = peg$literalExpectation(">=", false);
  const peg$c73 = "<";
  const peg$c74 = peg$literalExpectation("<", false);
  const peg$c75 = ">";
  const peg$c76 = peg$literalExpectation(">", false);
  const peg$c77 = "==";
  const peg$c78 = peg$literalExpectation("==", false);
  const peg$c79 = "!=";
  const peg$c80 = peg$literalExpectation("!=", false);
  const peg$c81 = "+";
  const peg$c82 = peg$literalExpectation("+", false);
  const peg$c83 = "-";
  const peg$c84 = peg$literalExpectation("-", false);
  const peg$c85 = "*";
  const peg$c86 = peg$literalExpectation("*", false);
  const peg$c87 = "/";
  const peg$c88 = peg$literalExpectation("/", false);
  const peg$c89 = "not";
  const peg$c90 = peg$literalExpectation("not", false);
  const peg$c91 = function(op: any, factor: any) {
    	if (!op) return factor;
      return {
      	kind: "unaryOp",
          operator: op[0],
          value: factor,
          location: location() // TODO should use location of op
      };
    };
  const peg$c92 = function(expr: any) { return expr; };
  const peg$c93 = peg$otherExpectation("function call or variable name");
  const peg$c94 = function(id: any, args: any) {
    	if (args === null) {
        return {
          kind: "variableAccess",
          name: id,
          location: location()
        }
      } else {
        return {
          kind: "functionCall",
          name: id,
          args: args,
          location: location()
        };
      }
    };
  const peg$c95 = peg$otherExpectation("arguments");
  const peg$c96 = function(args: any) {
      if (args == null) return [];
      var head = args[0];
      args = args[1].map(function(element) {
        return element[3];
      })
  	  args.unshift(head);
      return args;
    };
  const peg$c97 = peg$otherExpectation("number");
  const peg$c98 = /^[0-9]/;
  const peg$c99 = peg$classExpectation([["0", "9"]], false, false);
  const peg$c100 = ".";
  const peg$c101 = peg$literalExpectation(".", false);
  const peg$c102 = function() {
      return {
        kind: "number",
        value: parseFloat(text()),
        location: location()
      };
    };
  const peg$c103 = peg$otherExpectation("boolean");
  const peg$c104 = "false";
  const peg$c105 = peg$literalExpectation("false", false);
  const peg$c106 = "true";
  const peg$c107 = peg$literalExpectation("true", false);
  const peg$c108 = function() {
   	return {
      	kind: "boolean",
        value: text() == "true",
        location: location()
      };
   };
  const peg$c109 = peg$otherExpectation("string");
  const peg$c110 = "\"";
  const peg$c111 = peg$literalExpectation("\"", false);
  const peg$c112 = function(chars: any) {
      return {
        kind: "string",
        value: JSON.stringify(chars.join("")),
        location: location()
      };
    };
  const peg$c113 = "\\";
  const peg$c114 = peg$literalExpectation("\\", false);
  const peg$c115 = function() { return '"'; };
  const peg$c116 = function() { return text(); };
  const peg$c117 = peg$otherExpectation("identifier");
  const peg$c118 = function() {
      return {
        location: location(),
        value: text()
      };
    };
  const peg$c119 = /^[a-zA-Z_]/;
  const peg$c120 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false);
  const peg$c121 = /^[a-zA-Z_0-9]/;
  const peg$c122 = peg$classExpectation([["a", "z"], ["A", "Z"], "_", ["0", "9"]], false, false);
  const peg$c123 = peg$otherExpectation("whitespace");
  const peg$c124 = /^[ \t\n\r]/;
  const peg$c125 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);
  const peg$c126 = function() { return "whitespace"; };

  let peg$currPos = 0;
  let peg$savedPos = 0;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = 0;
  let peg$maxFailExpected: any[] = [];
  let peg$silentFails = 0;

  let peg$result;

  if (options.startRule !== undefined) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text(): string {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location(): IFileRange {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description: string, location1?: IFileRange) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location1
    );
  }

  function error(message: string, location1?: IFileRange) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location1);
  }

  function peg$literalExpectation(text1: string, ignoreCase: boolean): ILiteralExpectation {
    return { type: "literal", text: text1, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts: IClassParts, inverted: boolean, ignoreCase: boolean): IClassExpectation {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation(): IAnyExpectation {
    return { type: "any" };
  }

  function peg$endExpectation(): IEndExpectation {
    return { type: "end" };
  }

  function peg$otherExpectation(description: string): IOtherExpectation {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos: number) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos: number, endPos: number): IFileRange {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected1: Expectation) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected1);
  }

  function peg$buildSimpleError(message: string, location1: IFileRange) {
    return new SyntaxError(message, [], "", location1);
  }

  function peg$buildStructuredError(expected1: Expectation[], found: string | null, location1: IFileRange) {
    return new SyntaxError(
      SyntaxError.buildMessage(expected1, found),
      expected1,
      found,
      location1
    );
  }

  function peg$parseProgram(): any {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$currPos;
    s3 = peg$parse_();
    if (s3 !== peg$FAILED) {
      s4 = peg$parseStatement();
      if (s4 === peg$FAILED) {
        s4 = peg$parseFunction();
        if (s4 === peg$FAILED) {
          s4 = peg$parseRecord();
        }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_();
        if (s5 !== peg$FAILED) {
          s3 = [s3, s4, s5];
          s2 = s3;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$currPos;
      s3 = peg$parse_();
      if (s3 !== peg$FAILED) {
        s4 = peg$parseStatement();
        if (s4 === peg$FAILED) {
          s4 = peg$parseFunction();
          if (s4 === peg$FAILED) {
            s4 = peg$parseRecord();
          }
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parse_();
          if (s5 !== peg$FAILED) {
            s3 = [s3, s4, s5];
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c0(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseComment(): any {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 35) {
      s1 = peg$c1;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c2); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$currPos;
      peg$silentFails++;
      if (input.charCodeAt(peg$currPos) === 10) {
        s5 = peg$c3;
        peg$currPos++;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c4); }
      }
      peg$silentFails--;
      if (s5 === peg$FAILED) {
        s4 = undefined;
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
      if (s4 !== peg$FAILED) {
        if (input.length > peg$currPos) {
          s5 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c5); }
        }
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$currPos;
        peg$silentFails++;
        if (input.charCodeAt(peg$currPos) === 10) {
          s5 = peg$c3;
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c4); }
        }
        peg$silentFails--;
        if (s5 === peg$FAILED) {
          s4 = undefined;
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        if (s4 !== peg$FAILED) {
          if (input.length > peg$currPos) {
            s5 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c5); }
          }
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 10) {
          s3 = peg$c3;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c4); }
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c6();
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseType(): any {
    let s0, s1;

    s0 = peg$currPos;
    s1 = peg$parseIdentifier();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c7(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseFunction(): any {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15;

    peg$silentFails++;
    s0 = peg$currPos;
    if (input.substr(peg$currPos, 3) === peg$c9) {
      s1 = peg$c9;
      peg$currPos += 3;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c10); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseIdentifier();
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 40) {
              s5 = peg$c11;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c12); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parseParameters();
              if (s6 !== peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 41) {
                  s7 = peg$c13;
                  peg$currPos++;
                } else {
                  s7 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c14); }
                }
                if (s7 !== peg$FAILED) {
                  s8 = peg$parse_();
                  if (s8 !== peg$FAILED) {
                    s9 = peg$currPos;
                    if (input.charCodeAt(peg$currPos) === 58) {
                      s10 = peg$c15;
                      peg$currPos++;
                    } else {
                      s10 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c16); }
                    }
                    if (s10 !== peg$FAILED) {
                      s11 = peg$parse_();
                      if (s11 !== peg$FAILED) {
                        s12 = peg$parseType();
                        if (s12 !== peg$FAILED) {
                          s13 = peg$parse_();
                          if (s13 !== peg$FAILED) {
                            s10 = [s10, s11, s12, s13];
                            s9 = s10;
                          } else {
                            peg$currPos = s9;
                            s9 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s9;
                          s9 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s9;
                        s9 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s9;
                      s9 = peg$FAILED;
                    }
                    if (s9 === peg$FAILED) {
                      s9 = null;
                    }
                    if (s9 !== peg$FAILED) {
                      s10 = peg$parse_();
                      if (s10 !== peg$FAILED) {
                        s11 = [];
                        s12 = peg$currPos;
                        s13 = peg$parse_();
                        if (s13 !== peg$FAILED) {
                          s14 = peg$parseStatement();
                          if (s14 !== peg$FAILED) {
                            s15 = peg$parse_();
                            if (s15 !== peg$FAILED) {
                              s13 = [s13, s14, s15];
                              s12 = s13;
                            } else {
                              peg$currPos = s12;
                              s12 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s12;
                            s12 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s12;
                          s12 = peg$FAILED;
                        }
                        while (s12 !== peg$FAILED) {
                          s11.push(s12);
                          s12 = peg$currPos;
                          s13 = peg$parse_();
                          if (s13 !== peg$FAILED) {
                            s14 = peg$parseStatement();
                            if (s14 !== peg$FAILED) {
                              s15 = peg$parse_();
                              if (s15 !== peg$FAILED) {
                                s13 = [s13, s14, s15];
                                s12 = s13;
                              } else {
                                peg$currPos = s12;
                                s12 = peg$FAILED;
                              }
                            } else {
                              peg$currPos = s12;
                              s12 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s12;
                            s12 = peg$FAILED;
                          }
                        }
                        if (s11 !== peg$FAILED) {
                          s12 = peg$parse_();
                          if (s12 !== peg$FAILED) {
                            if (input.substr(peg$currPos, 3) === peg$c17) {
                              s13 = peg$c17;
                              peg$currPos += 3;
                            } else {
                              s13 = peg$FAILED;
                              if (peg$silentFails === 0) { peg$fail(peg$c18); }
                            }
                            if (s13 !== peg$FAILED) {
                              peg$savedPos = s0;
                              s1 = peg$c19(s3, s6, s9, s11);
                              s0 = s1;
                            } else {
                              peg$currPos = s0;
                              s0 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
